# fireteam

./: .actrc  .ai-rules.md  .claude.md  .cursorrules  .env.example  .gitignore  CLAUDE.md  COMPREHENSIVE_TEST_REPORT.md  DOCUMENTATION_UPDATE_SUMMARY.md  IMPROVEMENT_PLAN.md  LICENSE  MEMORY_SYSTEM.md  README.md  SYSTEM_SUMMARY.md  TESTING_COMPLETE.md  TEST_EXPANSION_PLAN.md  TEST_PLAN.md  TEST_RESULTS.md  TEST_SUITE_SUMMARY.md  TODO.md  analyze_all_tests.py  batch_test_runner.sh  config.py  monitor_progress.sh  monitor_resources.sh  orchestrator.py  pyproject.toml  requirements.txt  setup.sh
benchmark/: README.md  USAGE.md  __init__.py  harbor_adapter.py  install-fireteam.sh.j2  pyproject.toml  test_adapter.py
benchmark/adapters/: __init__.py  fireteam-setup.sh  fireteam_adapter.py
benchmarks/terminal_bench/: __init__.py  config.yaml  fireteam_agent.py  install_fireteam.sh  pyproject.toml  requirements.txt.bak  run_benchmark.py
benchmarks/terminal_bench/reports/: .gitkeep
benchmarks/terminal_bench/reports/in_progress/: .gitignore
benchmarks/terminal_bench/reports/test_runs/2025-10-19_23-48-01_vmain/: results.json  run_metadata.json
benchmarks/terminal_bench/reports/test_runs/2025-10-19_23-49-38_vmain/: results.json  run_metadata.json
benchmarks/terminal_bench/reports/test_runs/2025-10-19_23-49-38_vmain/create-bucket/create-bucket.1-of-1.2025-10-19_23-49-38_vmain/: results.json
benchmarks/terminal_bench/reports/test_runs/2025-10-19_23-49-38_vmain/create-bucket/create-bucket.1-of-1.2025-10-19_23-49-38_vmain/panes/: post-test.txt  pre-agent.txt
benchmarks/terminal_bench/reports/test_runs/2025-10-19_23-49-38_vmain/create-bucket/create-bucket.1-of-1.2025-10-19_23-49-38_vmain/sessions/: agent.cast  tests.cast
benchmarks/terminal_bench/reports/test_runs/2025-10-19_23-53-42_vmain/: results.json  run_metadata.json
benchmarks/terminal_bench/reports/test_runs/2025-10-19_23-53-42_vmain/git-workflow-hack/git-workflow-hack.1-of-1.2025-10-19_23-53-42_vmain/: commands.txt  results.json
benchmarks/terminal_bench/reports/test_runs/2025-10-19_23-53-42_vmain/git-workflow-hack/git-workflow-hack.1-of-1.2025-10-19_23-53-42_vmain/panes/: post-agent.txt  post-test.txt  pre-agent.txt
benchmarks/terminal_bench/reports/test_runs/2025-10-19_23-53-42_vmain/git-workflow-hack/git-workflow-hack.1-of-1.2025-10-19_23-53-42_vmain/sessions/: agent.cast  tests.cast
benchmarks/terminal_bench/reports/test_runs/2025-10-20_00-05-57_vmain/: results.json  run_metadata.json
benchmarks/terminal_bench/reports/test_runs/2025-10-20_00-05-57_vmain/tmux-advanced-workflow/tmux-advanced-workflow.1-of-1.2025-10-20_00-05-57_vmain/: commands.txt  results.json
benchmarks/terminal_bench/reports/test_runs/2025-10-20_00-05-57_vmain/tmux-advanced-workflow/tmux-advanced-workflow.1-of-1.2025-10-20_00-05-57_vmain/panes/: post-agent.txt  post-test.txt  pre-agent.txt
benchmarks/terminal_bench/reports/test_runs/2025-10-20_00-05-57_vmain/tmux-advanced-workflow/tmux-advanced-workflow.1-of-1.2025-10-20_00-05-57_vmain/sessions/: agent.cast  tests.cast
benchmarks/terminal_bench/reports/test_runs/2025-10-20_00-20-15_vmain/: results.json  run_metadata.json
benchmarks/terminal_bench/reports/test_runs/2025-10-20_00-20-15_vmain/fix-permissions/fix-permissions.1-of-1.2025-10-20_00-20-15_vmain/: commands.txt  results.json
benchmarks/terminal_bench/reports/test_runs/2025-10-20_00-20-15_vmain/fix-permissions/fix-permissions.1-of-1.2025-10-20_00-20-15_vmain/panes/: post-agent.txt  post-test.txt  pre-agent.txt
benchmarks/terminal_bench/reports/test_runs/2025-10-20_00-20-15_vmain/fix-permissions/fix-permissions.1-of-1.2025-10-20_00-20-15_vmain/sessions/: agent.cast  tests.cast
benchmarks/terminal_bench/reports/test_runs/2025-10-20_00-25-14_vmain/: results.json  run_metadata.json
benchmarks/terminal_bench/reports/test_runs/2025-10-20_00-25-14_vmain/intrusion-detection/intrusion-detection.1-of-1.2025-10-20_00-25-14_vmain/: commands.txt  results.json
benchmarks/terminal_bench/reports/test_runs/2025-10-20_00-25-14_vmain/intrusion-detection/intrusion-detection.1-of-1.2025-10-20_00-25-14_vmain/panes/: post-agent.txt  post-test.txt  pre-agent.txt
benchmarks/terminal_bench/reports/test_runs/2025-10-20_00-25-14_vmain/intrusion-detection/intrusion-detection.1-of-1.2025-10-20_00-25-14_vmain/sessions/: agent.cast  tests.cast
benchmarks/terminal_bench/reports/test_runs/2025-10-20_00-28-46_vmain/: results.json  run_metadata.json
benchmarks/terminal_bench/reports/test_runs/2025-10-20_00-28-46_vmain/solana-data/solana-data.1-of-1.2025-10-20_00-28-46_vmain/: commands.txt  results.json
benchmarks/terminal_bench/reports/test_runs/2025-10-20_00-28-46_vmain/solana-data/solana-data.1-of-1.2025-10-20_00-28-46_vmain/panes/: post-agent.txt  post-test.txt  pre-agent.txt
benchmarks/terminal_bench/reports/test_runs/2025-10-20_00-28-46_vmain/solana-data/solana-data.1-of-1.2025-10-20_00-28-46_vmain/sessions/: agent.cast  tests.cast
benchmarks/terminal_bench/reports/test_runs/2025-10-20_01-03-28_vmain/: results.json  run_metadata.json
benchmarks/terminal_bench/reports/test_runs/2025-10-20_01-03-28_vmain/create-bucket/create-bucket.1-of-1.2025-10-20_01-03-28_vmain/: commands.txt  results.json
benchmarks/terminal_bench/reports/test_runs/2025-10-20_01-18-57_vmain/: run_metadata.json
benchmarks/terminal_bench/reports/test_runs/2025-10-20_01-18-57_vmain/simple-sheets-put/simple-sheets-put.1-of-1.2025-10-20_01-18-57_vmain/: commands.txt
benchmarks/terminal_bench/reports/test_runs/2025-10-20_01-22-58_vmain/: run_metadata.json
tests/fixtures/sample_cli/: pyproject.toml
tests/fixtures/sample_cli/src/calculator/: __init__.py  history.py  main.py  ops.py
tests/fixtures/sample_cli/tests/: test_ops.py
(+365 files in other folders)
