[project]
name = "calculator"
version = "0.1.0"
description = "A simple calculator CLI for testing"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
calc = "calculator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calculator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
